Add simple form validation

--- a/src/components/organisms/AddEditForm/styles.scss
+++ b/src/components/organisms/AddEditForm/styles.scss
@@ -26,6 +26,10 @@
     text-transform: uppercase;
     font-weight: bold;
     padding: 10px 15px;
+
+    &:disabled {
+      opacity: 0.3;
+    }
   }
 
   a {
